Refactored to remove long method from classes, extracted private methods for more readability.